<resources>
    <string name="app_name">My WeatherApp</string>
    <string name="moscow">Moscow</string>
    <string name="temperature" translatable="false">+7°</string>
    <string name="condition">Mainly cloudy</string>
    <string name="filling">Feels like: +4°</string>
    <string name="city_selection">City selection</string>
    <string name="prompt_text">Enter the name of the city</string>
    <string name="preferences_header">Preferences</string>
    <string name="dark_theme">Dark theme</string>
    <string name="temperature_units">Temperature in F°</string>
    <string name="wind_speed">Wind speed</string>
    <string name="atmosphere_pressure">Pressure</string>
    <string name="extra">Open Ya.Pogoda</string>

</resources>
