<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lime"
    tools:context=".PreferencesActivity">

    <TextView
        android:id="@+id/tv_preferences_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/base_margins"
        android:text="@string/preferences_header"
        android:textAlignment="center"
        android:textSize="@dimen/font_large"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/sw_dark_theme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/base_margins"
        android:text="@string/dark_theme"
        android:textAlignment="textStart"
        android:textSize="@dimen/font_medium"
        app:layout_constraintTop_toBottomOf="@id/tv_preferences_header" />

    <Switch
        android:id="@+id/sw_temperature_units"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/base_margins"
        android:text="@string/temperature_units"
        android:textAlignment="textStart"
        android:textSize="@dimen/font_medium"
        app:layout_constraintTop_toBottomOf="@id/sw_dark_theme" />

    <CheckBox
        android:id="@+id/cb_wind_speed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/base_margins"
        android:text="@string/wind_speed"
        android:textSize="@dimen/font_medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sw_temperature_units" />

    <CheckBox
        android:id="@+id/cb_atmosphere_pressure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/base_margins"
        android:text="@string/atmosphere_pressure"
        android:textSize="@dimen/font_medium"
        app:layout_constraintStart_toEndOf="@id/cb_wind_speed"
        app:layout_constraintTop_toBottomOf="@id/sw_temperature_units" />

</androidx.constraintlayout.widget.ConstraintLayout>