<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="@color/lime">

    <TextView
        android:id="@+id/tv_city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/base_margins"
        android:text="@string/moscow"
        android:textAlignment="center"
        android:textSize="@dimen/font_large"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temperature"
            android:textSize="@dimen/font_xxx_large" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_cloud" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_condition"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/condition"
        android:textAlignment="center"
        android:textSize="@dimen/font_medium"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_filling"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/filling"
        android:textAlignment="center"
        android:textSize="@dimen/font_medium" />
</LinearLayout>